update metadata for testing post and rebuild site

--- a/public/testing-a-new-post-from-the-wysiwyg-editor/index.html
+++ b/public/testing-a-new-post-from-the-wysiwyg-editor/index.html
@@ -99,8 +99,10 @@
           <li class="list-inline-item"><i class="ti-calendar mr-2"></i>Jul 30, 2020</li>
         </ul>
         <article class="content">
-          <img src="/images/masonary-post/post-8.jpg" alt="post-thumb" class="img-fluid rounded float-left mr-5 mb-4">
-          
+          <img src="/images/featured-post/post-5.jpg" alt="post-thumb" class="img-fluid rounded float-left mr-5 mb-4">
+          <p>This is a test of the new wysiwyg editing system.</p>
+<p>Please bear in mind this is a work in progress, but as work is progressing, potential can be seen!</p>
+
         </article>
       </div>
       <div class="col-lg-4">
@@ -115,7 +117,7 @@
     
     <div class="media mb-4">
       <div class="post-thumb-sm mr-3">
-        <a href="/testing-a-new-post-from-the-wysiwyg-editor/"><img class="mr-3 post-thumb-sm" src="/images/masonary-post/post-8.jpg"></a>
+        <a href="/testing-a-new-post-from-the-wysiwyg-editor/"><img class="mr-3 post-thumb-sm" src="/images/featured-post/post-5.jpg"></a>
       </div>
       <div class="media-body">
         <ul class="list-inline d-flex justify-content-between mb-2">
@@ -177,6 +179,7 @@
       <li class="list-inline-item m-1"><a href="/categories/food">Food</a></li>
       <li class="list-inline-item m-1"><a href="/categories/nature">Nature</a></li>
       <li class="list-inline-item m-1"><a href="/categories/philosophy">Philosophy</a></li>
+      <li class="list-inline-item m-1"><a href="/categories/technology">Technology</a></li>
       <li class="list-inline-item m-1"><a href="/categories/valuable-idea">Valuable idea</a></li>
     </ul>
   </div>
