--- a/public/index.html
+++ b/public/index.html
@@ -164,10 +164,10 @@
       
       <div class="col-lg-4 col-sm-6 mb-5">
         <article class="text-center">
-          <img class="img-fluid mb-4" src="/images/masonary-post/post-8.jpg" alt="post-thumb">
-          <p class="text-uppercase mb-2">[]</p>
+          <img class="img-fluid mb-4" src="/images/featured-post/post-5.jpg" alt="post-thumb">
+          <p class="text-uppercase mb-2">[Technology]</p>
           <h4 class="title-border"><a class="text-dark" href="/testing-a-new-post-from-the-wysiwyg-editor/">Testing a new post - from the wysiwyg editor</a></h4>
-          <p></p>
+          <p>This is a test of the new wysiwyg editing system.</p>
           <a href="/testing-a-new-post-from-the-wysiwyg-editor/" class="btn btn-transparent">read more</a>
         </article>
       </div>
