slight tweaks to wysiwyg post

--- a/public/testing-a-new-post-from-the-wysiwyg-editor/index.html
+++ b/public/testing-a-new-post-from-the-wysiwyg-editor/index.html
@@ -99,9 +99,15 @@
           <li class="list-inline-item"><i class="ti-calendar mr-2"></i>Jul 30, 2020</li>
         </ul>
         <article class="content">
-          <img src="/images/featured-post/post-5.jpg" alt="post-thumb" class="img-fluid rounded float-left mr-5 mb-4">
+          <img src="/images/masonary-post/post-1.jpg" alt="post-thumb" class="img-fluid rounded float-left mr-5 mb-4">
           <p>This is a test of the new wysiwyg editing system.</p>
-<p>Please bear in mind this is a work in progress, but as work is progressing, potential can be seen!</p>
+<p>Please bear in mind this is a work in progress, but as work is continuing, potential can be seen!</p>
+<p>The article starts out to the right of the picture, but lo and behold, the content then starts to dribble its way down on the page, slowly forming cohesive paragraphs that progress down into full-blown text with options to create the illusion of content.</p>
+<blockquote>
+<p>Blockquotes are pretty cool, too, although I think this theme is due for a color update. Standard Lorem Ipsum time.</p>
+</blockquote>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 
         </article>
       </div>
@@ -117,7 +123,7 @@
     
     <div class="media mb-4">
       <div class="post-thumb-sm mr-3">
-        <a href="/testing-a-new-post-from-the-wysiwyg-editor/"><img class="mr-3 post-thumb-sm" src="/images/featured-post/post-5.jpg"></a>
+        <a href="/testing-a-new-post-from-the-wysiwyg-editor/"><img class="mr-3 post-thumb-sm" src="/images/masonary-post/post-1.jpg"></a>
       </div>
       <div class="media-body">
         <ul class="list-inline d-flex justify-content-between mb-2">
